--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePricelistConfirmation.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePricelistConfirmation.html
@@ -1,9 +1,29 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<div vr-modalcontent ng-controller="WhS_BE_SendSalePricelistConfirmationController" vr-loader="scopeModel.isLoading" width="40%" >
+    <vr-modalbody>
+        <vr-form name="formSendSalePricelistConfirmation">
+            <vr-row>
+                <vr-label largesize>Below customers have previous pricelists not sent, are you sure you want to continue?</vr-label>
+            </vr-row>
+            <vr-row>
+                <vr-columns width="fullrow">
+                    <vr-datagrid datasource="scopeModal.customers"
+                                 on-ready="onGridReady"
+                                 pagingtype="'PagingOnScroll'"
+                                 idfield="CarrierAccountId">
+                        <vr-datagridcolumn headertext="'ID'" field="'CarrierAccountId'" type="'Text'"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Customer Name'" field="'Name'" type="'Text'"></vr-datagridcolumn>
+                    </vr-datagrid>
+                </vr-columns>
+            </vr-row>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="Continue" formname="formSendSalePricelistConfirmation" data-onclick="scopeModal.continueSendSalePricelist"></vr-button>
+                <vr-button type="Stop" data-onclick="scopeModal.cancelSendSalePricelist"></vr-button>
+            </div>
+        </vr-actionbar>
 
-</body>
-</html>
+    </div>
+</div>
