--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
@@ -15,14 +15,19 @@
         <vr-columns width="1/2row">
             <retail-multinet-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady"></retail-multinet-accounttype-selector>
         </vr-columns>
+    </vr-row>
+    <vr-row removeline>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.excludeSaleTaxes" label="Exclude Sale Taxes"></vr-switch>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.excludeWHTaxes" label="Exclude WH Taxes"></vr-switch>
+        </vr-columns>
         <vr-columns width="1/2row">
             <vr-fileupload extension="images" value="scopeModel.customerLogo" label="Customer Logo"> </vr-fileupload>
         </vr-columns>
         <vr-columns width="1/2row">
             <vr-preview-image height="80px" width="80px" value="scopeModel.customerLogo.fileId"> </vr-preview-image>
-        </vr-columns>
-        <vr-columns width="1/2row">
-            <vr-switch value="scopeModel.excludeTaxes" label="Exclude Taxes"></vr-switch>
         </vr-columns>
     </vr-row>
 </vr-tab>
